css/about.css
/*-- -------------------------- -->
<---          Landing           -->
<--- -------------------------- -*/

/* Mobile */
@media only screen and (min-width: 0em) {
   #int-hero {
    margin-bottom: 5em;
  }
  #mission .content {
    max-width: 70em;
    margin: auto;
    text-align: center;
  }
  #mission p {
    font-size: min(6vw, 1.6em);
    line-height: 1.7em;
    margin-bottom: 2em;
  }
  #mission p:last-of-type {
    margin-bottom: 0;
  }
}


/*-- -------------------------- -->
<---          Staff             -->
<--- -------------------------- -*/

/* Mobile */
@media only screen and (min-width: 0em) {
  #staff {
    position: relative;
  }
  #staff .container {
    width: 90%;
    max-width: 65em;
  }
  #staff .container:not(:last-of-type) {
    margin-bottom: 8rem;
  }
  #staff .content {
    margin: auto;
    margin-top: 4.6875em;
    text-align: center;
  }
  #staff .content h2 {
    margin-bottom: 1em;
    font-size: min(8vw, 2em);
  }
  #staff .content p {
    font-size: min(5vw, 1.5em);
    text-align: left;
    padding-left: min(5vw, 1.5em);
    margin-bottom: 1.75em;
    line-height: 2em;
  }
  #staff .content .bio a {
    text-decoration: none;
    font-size: 1em;
    color: black;
    font-weight: 500;
  }
  #staff .content .bio a:hover, 
  #staff .content .bio a:focus {
    opacity: 0.7;
  }
  #staff picture {
    display: block;
    position: relative;
    margin: auto;
    width: 20em;
    height: 28em;
    font-size: min(3vw, 0.7em);
  }
  #staff picture:before {
    content: '';
    position: absolute;
    display: block;
    height: 100%;
    width: 100%;
    background: var(--primary);
    opacity: 1;
    top: 2.5em;
    left: -2.5em;
  }
  #staff picture:after {
    content: '';
    position: absolute;
    display: block;
    height: 32.25em;
    width: 28.75em;
    background: url("../images/content-circles.svg");
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 1;
    top: -2.125em;
    right: -2.5em;
    z-index: -1;
  }
  #staff picture img {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
}

/* Inbetween */
@media only screen and (min-width: 900px) {
  #staff .content {
    margin-top: 0;
  }
  #staff .content h2 {
    text-align: left;
  }
  #staff .content p {
    padding-left: 0;
  }
  #staff picture {
    float: left;
    margin-right: 10em;
    margin-bottom: 4em;
  }
}



/*-- -------------------------- -->
<---          Office            -->
<--- -------------------------- -*/

/* Mobile */
@media only screen and (min-width: 0em) {
  #office .container {
    text-align: center;
    width: 90%;
    max-width: 70em;
    padding: 4em 0 2em;
    background: linear-gradient(var(--primary), var(--primary) 2.5%, white 2.5%, white);
    -webkit-box-shadow: 0px -7px 11px -1px rgba(0,0,0,0.2); 
    box-shadow: 0px -4px 10px 4px rgba(0,0,0,0.2);
    border-radius: 10px;
  } 
  #office .container h2 {
    font-size: min(7vw, 2em);
    font-weight: 400;
    margin-bottom: 0.75em;
  }
  #office .content {
    margin: auto;
  }
  #office .contact-info {
    margin: auto;
    margin-bottom: 4em;
    width: 90%;
    max-width: 23.1875em;
    padding: 0.5rem;
    border-radius: 1em;
    background-color: whitesmoke;
    -webkit-box-shadow: 0px 0px 25px -7px var(--primary-dark);
       -moz-box-shadow: 0px 0px 25px -7px var(--primary-dark);
            box-shadow: 0px 0px 25px -7px var(--primary-dark);
  }
  #office .contact-info a {
    text-decoration: none;
  }
  #office .contact-info .flex {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    padding: 0.15em 0.5em;
  }
  #office .contact-info p {
    font-size: min(5vw, 1.25rem);
  }
  #office .contact-info span {
    white-space: nowrap;
  }
  #office .contact-info .flex > *:first-child {
    width: 30%;
    font-weight: 700;
  }
  #office .contact-info .flex > *:last-child {
    width: 65%;
    text-align: left;
  }
  #office .office-name:hover,
  #office .office-name:focus, 
  #office .address:hover, 
  #office .address:focus {
    text-decoration: underline;
  }
  #office .address img {
    width: 3em;
  }
  #office .phone img {
    width: 2em;
  }
  #office iframe {
    max-width: 90%;
    display: block;
    margin: auto;
    margin-bottom: 4em;
  }
  #office .button-solid {
    display: inline-block;
    font-size: min(4vw, 1em);
    max-width: 95%;
  }
  #office .button-solid.hidden {
    display: none;
  }
  #office .contact-info.other-offices {
    padding: 1em;
    white-space: nowrap;
  }
  #office .content.other-offices.hidden {
    display: none;
  }
  #office h2.other-offices.hidden {
    display: none;
  }
  #office h2.other-offices {
    display: inline-block;
    position: relative;
    font-size: min(10vw, 3em);
    margin-top: 0.5em;
    margin-bottom: 1.5em;
  }
  #office h2.other-offices:after {
    content: '';
    position: absolute;
    display: block;
    width: 100%;
    height: 0.2em;
    background: var(--primary);
    opacity: 1;
    bottom: -0.3em;
    border-radius: 0.15789474em;
    left: 0em;
    right: -0.31578947em;
  }
  #office .contact-info.other-offices:last-of-type {
    margin-bottom: 0;
  }
  #office .contact-info.other-offices > .flex > .img-wrapper {
    text-align: right;
  }
  #office .contact-info.other-offices > .phone.flex > .img-wrapper {
    padding-right: 0.5em;
  }
}

/* Small Desktop */
@media only screen and (min-width: 64em) {
  #office .container {
    text-align: center;
    padding: 7em 0 4em;
  }
  #office .content {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;    
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-evenly;
    margin-bottom: 6em;
  }
  #office .content.other-offices {
    margin-bottom: 0;
  }
  #office .contact-info {
    flex: 1;
    align-self: center;
    margin: 0;
  }
  #office iframe {
    margin: 0;
  }
  #office .button-solid {
    font-size: 1.25em;
  }
}

/* Very Large Desktop */
@media only screen and (min-width: 1800px) {
  #office iframe {
    width: 40%;
    height: auto;
  }
}



/*-- -------------------------- -->
<---    Final Call To Action    -->
<--- -------------------------- -*/
/* Mobile */
@media only screen and (min-width: 0em) {
  #cta {
    position: relative;
    padding: 3.125em 0;
    margin-bottom: 0;
  }
  #cta:before {
    content: '';
    position: absolute;
    display: block;
    height: 100%;
    width: 100%;
    background: #000;
    opacity: .7;
    top: 0;
    left: 0;
    z-index: -1;
  }
  #cta .container {
    text-align: center;
  }
  #cta picture {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    z-index: -2;
  }
  #cta picture img {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    object-fit: cover;
  }
  #cta h2 {
    font-weight: 900;
    font-size: min(9vw, 3em);
    line-height: 1.20833333;
    color: #fff;
    position: relative;
    margin-bottom: 0.75em;
    text-align: center;
  }
  #cta p {
    color: #fff;
    text-align: center;
    opacity: 1;
    margin: auto;
    margin-bottom: 2em;
    width: 96%;
    max-width: 33.22222222em;
    font-size: 1.5em;
  }
  #cta .button-solid {
    font-size: min(4.5vw, 1em);
  }
}
/* Small Desktop */
@media only screen and (min-width: 64em) {
  #cta {
    padding: 10.5em 0;
  }
}
/* Large Desktop */
@media only screen and (min-width: 1300px) {
  #cta {
    position: relative;
  }
  #cta:before {
    display: none;
  }
  #cta:after {
    content: '';
    position: absolute;
    display: block;
    height: 69.25em;
    width: 125em;
    background: url("../images/cta-squares.svg");
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    opacity: 1;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    z-index: -3;
  }
  #cta picture:before {
    content: '';
    position: absolute;
    display: block;
    height: 100%;
    width: 100%;
    background: #000;
    opacity: .7;
    top: 0;
    left: 0;
    z-index: 1;
  }
}

